examples/testing/negative_costs-lower_bounds/ex_2components_aditive2.ces
eq(a(X,Y,Z), -1 ,[a(X - 1,Y+2,Z-1)], [X>=0,Y>=0,Z>=0]).
eq(a(X,Y,Z), -1 ,[a(X - 1,Y+1,Z)], [X>=0,Y>=0,Z>=0]).
eq(a(X,Y,Z), -1 ,[a(X ,Y-1,Z)], [X>=0,Y>=0,Z>=0]).

eq(a(X,Y,Z), 0,[], [X=0,Y=0,Z=0]).
